openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: marketing-intern
  labels:
    app: marketing-intern
spec:
  to:
    kind: Service
    name: marketing-intern
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
